[tool.briefcase]
project_name = "dweet2ser"
bundle = "com.zhenry9"
version = "0.3.1"
url = "https://github.com/zhenry9/dweet2ser"
license = "GNU General Public License v3 or later (GPLv3+)"
author = 'Zach Henry'
author_email = "zhenry9@gmail.com"

[tool.briefcase.app.dweet2ser]
formal_name = "dweet2ser"
description = "A serial to dweet.io interface."
icon = "dweet2ser/resources/dweet2ser"
sources = ['dweet2ser']
requires = [
    "colorama>=0.4.4, <1",
    "Flask>=1.1.2, <2",
    "Flask-SocketIO>=5.0.1, <6",
    "pyserial>=3.5, <4",
    "requests>=2.25.1, <3",
    "termcolor>=1.1.0, <2",
    "psutil>=5.8.0, <6"
]


[tool.briefcase.app.dweet2ser.macOS]
requires = []

[tool.briefcase.app.dweet2ser.linux]
requires = []
system_requires = []

[tool.briefcase.app.dweet2ser.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.dweet2ser.iOS]
requires = []

[tool.briefcase.app.dweet2ser.android]
requires = []

[tool.poetry]
name = "dweet2ser"
version = "0.2.3"
description = "A serial <-"
authors = ["Zach Henry"]
license = "GNU GPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
briefcase = "^0.3.5"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
pyserial = "^3.5"
requests = "^2.25.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools"]
