[tool.briefcase]
project_name = "Ullr"
bundle = "com.zhenry9"
version = "0.1.7"
url = "https://github.com/zhenry9/ullr"
license = "GNU General Public License v3 or later (GPLv3+)"
author = 'Zach Henry'
author_email = "zhenry9@gmail.com"

[tool.briefcase.app.ullr]
formal_name = "Ullr"
description = "A serial to MQTT interface for sports timing."
icon = "ullr/resources/ullr"
sources = ['ullr']
requires = [
    "colorama>=0.4.4, <1",
    "Flask>=1.1.2, <2",
    "Flask-SocketIO>=5.0.1, <6",
    "pyserial>=3.5, <4",
    "requests>=2.25.1, <3",
    "termcolor>=1.1.0, <2",
    "psutil>=5.8.0, <6",
    "paho-mqtt",
    "ntplib"
]




[build-system]
requires = ["setuptools"]
